--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,9 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hehe</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>VLXD 5T</title>
 </head>
 <body>
-        hihihihi
+        <h1>xin chao moi nguoi</h1>
+        <img src="images/1.jpg" >
+        <h2>
+            Message: <%= message %>
+        </h2>
 </body>
 </html>
